# datajet

./: .flake8  .gitignore  404.html  CONTRIBUTING.rst  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml  tox.ini
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: on-merge-to-main.yml  on-pull-request.yml  on-release-main.yml
api/: index.html
core-concepts/: index.html
datajet/: __init__.py  _data_map_helpers.py  _datamap.py  _normalization.py  _validations.py  common_resolvers.py  data_map_helpers.py  datajet.py  datamap.py  exceptions.py  keywords.py  normalization.py  pandas_helpers.py  validations.py
datamap-reference/: index.html
docs/: api.md  core-concepts.md  datamap-reference.md  index.md  installation.md  modules.md  quickstart.md  tutorial.md  what-is-datajet.md
docs/user-guide/: getting-started.md
git_hooks/: pre-commit
installation/: index.html
quickstart/: index.html
search/: search_index.json
tests/: test_data_map_helpers.py  test_datajet.py  test_datamap.py  test_keywords.py  test_normalization.py  test_validations.py
tutorial/: index.html
user-guide/getting-started/: index.html
what-is-datajet/: index.html
